--- a/Kirby/Kirby.vcxproj
+++ b/Kirby/Kirby.vcxproj
@@ -14,6 +14,7 @@
     <ClInclude Include="AnimKeyframes.h" />
     <ClInclude Include="BaseEnemy.h" />
     <ClInclude Include="BaseObject.h" />
+    <ClInclude Include="ColisionHelper.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Player.h" />
@@ -28,6 +29,7 @@
   <ItemGroup>
     <ClCompile Include="BaseEnemy.cpp" />
     <ClCompile Include="BaseObject.cpp" />
+    <ClCompile Include="ColisionHelper.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Character.cpp" />
