--- a/Kirby/Kirby.vcxproj
+++ b/Kirby/Kirby.vcxproj
@@ -17,6 +17,7 @@
     <ClInclude Include="ColisionHelper.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="PinxoEnemy.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="ProjectileObject.h" />
     <ClInclude Include="Scene.h" />
@@ -33,6 +34,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="PinxoEnemy.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ProjectileObject.cpp" />
     <ClCompile Include="Scene.cpp" />
