--- a/Kirby/CMakeLists.txt
+++ b/Kirby/CMakeLists.txt
@@ -5,6 +5,7 @@ cmake_policy(SET CMP0015 NEW)
 execute_process(COMMAND ln -s ../shaders)
 execute_process(COMMAND ln -s ../images)
 execute_process(COMMAND ln -s ../levels)
+execute_process(COMMAND ln -s ../sounds)
 
 set(appName Kirby)
 
@@ -14,21 +15,26 @@ find_package(GLUT REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(GLM REQUIRED)
 find_package(SOIL REQUIRED)
+find_package(SOIL REQUIRED)
+find_package(SFML COMPONENTS audio)
 
 include_directories(${OPENGL_INCLUDE_DIRS})
 include_directories(${GLUT_INCLUDE_DIRS})
 include_directories(${GLEW_INCLUDE_DIRS})
 include_directories(${GLM_INCLUDE_DIRS})
 include_directories(${SOIL_INCLUDE_DIRS})
+include_directories(${SFML_INCLUDE_DIRS})
 
 link_directories(${OPENGL_LIBRARY_DIRS})
 link_directories(${GLUT_LIBRARY_DIRS})
 link_directories(${GLEW_LIBRARY_DIRS})
 link_directories(${SOIL_LIBRARY_DIRS})
+link_directories(${SFML_LIBRARY_DIRS})
 
-add_executable(${appName} Player.h Player.cpp AnimKeyframes.h Sprite.h Sprite.cpp TileMap.h TileMap.cpp Texture.h Texture.cpp Scene.h Scene.cpp Shader.h Shader.cpp ShaderProgram.h ShaderProgram.cpp Game.h Game.cpp main.cpp BaseEnemy.h BaseEnemy.cpp Character.h Character.cpp BaseObject.h BaseObject.cpp ProjectileObject.h ProjectileObject.cpp Constants.h PinxoEnemy.cpp PinxoEnemy.h ColisionHelper.h ColisionHelper.cpp)
 
-target_link_libraries(${appName} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${SOIL_LIBRARIES} ${FREETYPE_LIBRARIES}) # ${GLM_LIBRARIES}
+add_executable(${appName} Player.h Player.cpp AnimKeyframes.h Sprite.h Sprite.cpp TileMap.h TileMap.cpp Texture.h Texture.cpp Scene.h Scene.cpp Shader.h Shader.cpp ShaderProgram.h ShaderProgram.cpp Game.h Game.cpp main.cpp BaseEnemy.h BaseEnemy.cpp Character.h Character.cpp BaseObject.h BaseObject.cpp ProjectileObject.h ProjectileObject.cpp Constants.h PinxoEnemy.cpp PinxoEnemy.h ColisionHelper.h ColisionHelper.cpp helpers/SoundHelper.cpp helpers/SoundHelper.h)
+
+target_link_libraries(${appName} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${SOIL_LIBRARIES} ${SFML_LIBRARIES} ${FREETYPE_LIBRARIES}) # ${GLM_LIBRARIES}
 
 
 
