Subdivided in packages for visual studio. Fixed the lag genered by the sound

--- a/Kirby/Kirby.vcxproj
+++ b/Kirby/Kirby.vcxproj
@@ -12,46 +12,46 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimKeyframes.h" />
-    <ClInclude Include="BaseEnemy.h" />
-    <ClInclude Include="BaseObject.h" />
-    <ClInclude Include="ColisionHelper.h" />
-    <ClInclude Include="Constants.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="Character.h" />
-    <ClInclude Include="GUI.h" />
+    <ClInclude Include="base\Constants.h" />
+    <ClInclude Include="base\Game.h" />
+    <ClInclude Include="base\GUI.h" />
+    <ClInclude Include="base\Scene.h" />
+    <ClInclude Include="base\Shader.h" />
+    <ClInclude Include="base\ShaderProgram.h" />
+    <ClInclude Include="base\Sprite.h" />
+    <ClInclude Include="base\Text.h" />
+    <ClInclude Include="base\Texture.h" />
+    <ClInclude Include="base\TexturedQuad.h" />
+    <ClInclude Include="base\TileMap.h" />
+    <ClInclude Include="characters\BaseEnemy.h" />
+    <ClInclude Include="characters\Character.h" />
+    <ClInclude Include="characters\PinxoEnemy.h" />
+    <ClInclude Include="characters\Player.h" />
+    <ClInclude Include="helpers\ColisionHelper.h" />
     <ClInclude Include="helpers\SoundHelper.h" />
-    <ClInclude Include="PinxoEnemy.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="ProjectileObject.h" />
-    <ClInclude Include="Scene.h" />
-    <ClInclude Include="Shader.h" />
-    <ClInclude Include="ShaderProgram.h" />
-    <ClInclude Include="Sprite.h" />
-    <ClInclude Include="Text.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="TexturedQuad.h" />
-    <ClInclude Include="TileMap.h" />
+    <ClInclude Include="objects\BaseObject.h" />
+    <ClInclude Include="objects\ProjectileObject.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BaseEnemy.cpp" />
-    <ClCompile Include="BaseObject.cpp" />
-    <ClCompile Include="ColisionHelper.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="GUI.cpp" />
+    <ClCompile Include="base\Game.cpp" />
+    <ClCompile Include="base\GUI.cpp" />
+    <ClCompile Include="base\Scene.cpp" />
+    <ClCompile Include="base\Shader.cpp" />
+    <ClCompile Include="base\ShaderProgram.cpp" />
+    <ClCompile Include="base\Sprite.cpp" />
+    <ClCompile Include="base\Text.cpp" />
+    <ClCompile Include="base\Texture.cpp" />
+    <ClCompile Include="base\TexturedQuad.cpp" />
+    <ClCompile Include="base\TileMap.cpp" />
+    <ClCompile Include="characters\BaseEnemy.cpp" />
+    <ClCompile Include="characters\Character.cpp" />
+    <ClCompile Include="characters\PinxoEnemy.cpp" />
+    <ClCompile Include="characters\Player.cpp" />
+    <ClCompile Include="helpers\ColisionHelper.cpp" />
     <ClCompile Include="helpers\SoundHelper.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Character.cpp" />
-    <ClCompile Include="PinxoEnemy.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="ProjectileObject.cpp" />
-    <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="ShaderProgram.cpp" />
-    <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="Text.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="TexturedQuad.cpp" />
-    <ClCompile Include="TileMap.cpp" />
+    <ClCompile Include="objects\BaseObject.cpp" />
+    <ClCompile Include="objects\ProjectileObject.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5BE6CA2A-E5A8-40CC-9015-047CE0C78036}</ProjectGuid>
