GUI and SoundHelper belongs to Game. When Kirby losses all energy, the current level is reseted. Now it's easier to add a new level, just call to scene.init with level tilemap and level background, TODO: also add music pathfile, enemies initial location pathfile, objects initial location pathfile as a parameter for creating a new scene

--- a/Kirby/Kirby.vcxproj
+++ b/Kirby/Kirby.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimKeyframes.h" />
-    <ClInclude Include="base\Constants.h" />
+    <ClInclude Include="base\Defines.h" />
     <ClInclude Include="base\Game.h" />
     <ClInclude Include="base\GUI.h" />
     <ClInclude Include="base\Scene.h" />
@@ -24,6 +24,7 @@
     <ClInclude Include="base\TexturedQuad.h" />
     <ClInclude Include="base\TileMap.h" />
     <ClInclude Include="characters\BaseEnemy.h" />
+    <ClInclude Include="characters\BlackKirby.h" />
     <ClInclude Include="characters\Character.h" />
     <ClInclude Include="characters\PinxoEnemy.h" />
     <ClInclude Include="characters\Player.h" />
@@ -44,6 +45,7 @@
     <ClCompile Include="base\TexturedQuad.cpp" />
     <ClCompile Include="base\TileMap.cpp" />
     <ClCompile Include="characters\BaseEnemy.cpp" />
+    <ClCompile Include="characters\BlackKirby.cpp" />
     <ClCompile Include="characters\Character.cpp" />
     <ClCompile Include="characters\PinxoEnemy.cpp" />
     <ClCompile Include="characters\Player.cpp" />
