--- a/Kirby/Kirby.vcxproj.filters
+++ b/Kirby/Kirby.vcxproj.filters
@@ -56,12 +56,12 @@
     <ClCompile Include="objects\ProjectileObject.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="characters\BlackKirby.cpp">
+      <Filter>Characters</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimKeyframes.h" />
-    <ClInclude Include="base\Constants.h">
-      <Filter>Base</Filter>
-    </ClInclude>
     <ClInclude Include="base\Game.h">
       <Filter>Base</Filter>
     </ClInclude>
@@ -115,6 +115,12 @@
     </ClInclude>
     <ClInclude Include="objects\ProjectileObject.h">
       <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="characters\BlackKirby.h">
+      <Filter>Characters</Filter>
+    </ClInclude>
+    <ClInclude Include="base\Defines.h">
+      <Filter>Base</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
