--- a/Kirby/Kirby.vcxproj
+++ b/Kirby/Kirby.vcxproj
@@ -27,6 +27,8 @@
     <ClInclude Include="characters\BaseEnemy.h" />
     <ClInclude Include="characters\BlackKirby.h" />
     <ClInclude Include="characters\Character.h" />
+    <ClInclude Include="characters\FireKirby.h" />
+    <ClInclude Include="characters\Kirby.h" />
     <ClInclude Include="characters\PinxoEnemy.h" />
     <ClInclude Include="characters\Player.h" />
     <ClInclude Include="helpers\ColisionHelper.h" />
@@ -49,6 +51,8 @@
     <ClCompile Include="characters\BaseEnemy.cpp" />
     <ClCompile Include="characters\BlackKirby.cpp" />
     <ClCompile Include="characters\Character.cpp" />
+    <ClCompile Include="characters\FireKirby.cpp" />
+    <ClCompile Include="characters\Kirby.cpp" />
     <ClCompile Include="characters\PinxoEnemy.cpp" />
     <ClCompile Include="characters\Player.cpp" />
     <ClCompile Include="helpers\ColisionHelper.cpp" />
