--- a/Kirby/Kirby.vcxproj.filters
+++ b/Kirby/Kirby.vcxproj.filters
@@ -62,6 +62,12 @@
     <ClCompile Include="base\MainMenu.cpp">
       <Filter>Base</Filter>
     </ClCompile>
+    <ClCompile Include="characters\Kirby.cpp">
+      <Filter>Characters</Filter>
+    </ClCompile>
+    <ClCompile Include="characters\FireKirby.cpp">
+      <Filter>Characters</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimKeyframes.h" />
@@ -127,6 +133,12 @@
     </ClInclude>
     <ClInclude Include="base\MainMenu.h">
       <Filter>Base</Filter>
+    </ClInclude>
+    <ClInclude Include="characters\Kirby.h">
+      <Filter>Characters</Filter>
+    </ClInclude>
+    <ClInclude Include="characters\FireKirby.h">
+      <Filter>Characters</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
