--- a/Kirby/Kirby.vcxproj.filters
+++ b/Kirby/Kirby.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="characters\FireKirby.cpp">
       <Filter>Characters</Filter>
     </ClCompile>
+    <ClCompile Include="helpers\TransformationHelper.cpp">
+      <Filter>Helpers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimKeyframes.h" />
@@ -139,6 +142,9 @@
     </ClInclude>
     <ClInclude Include="characters\FireKirby.h">
       <Filter>Characters</Filter>
+    </ClInclude>
+    <ClInclude Include="helpers\TransformationHelper.h">
+      <Filter>Helpers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
