Shaders linux added

--- a/Kirby/CMakeLists.txt
+++ b/Kirby/CMakeLists.txt
@@ -3,8 +3,11 @@ cmake_minimum_required(VERSION 2.8)
 cmake_policy(SET CMP0015 NEW)
 if(UNIX)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
+    execute_process(COMMAND ln -s ../shaders_linux)
+else()
+    execute_process(COMMAND ln -s ../shaders)
 endif()
-execute_process(COMMAND ln -s ../shaders)
+
 execute_process(COMMAND ln -s ../images)
 execute_process(COMMAND ln -s ../levels)
 execute_process(COMMAND ln -s ../sounds)
