--- a/Kirby/Kirby.vcxproj
+++ b/Kirby/Kirby.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="characters\PinxoEnemy.h" />
     <ClInclude Include="characters\Player.h" />
     <ClInclude Include="characters\PowerType.h" />
+    <ClInclude Include="characters\WalkingDummyEnemy.h" />
     <ClInclude Include="helpers\ColisionHelper.h" />
     <ClInclude Include="helpers\SoundHelper.h" />
     <ClInclude Include="helpers\TransformationHelper.h" />
@@ -59,6 +60,7 @@
     <ClCompile Include="characters\Kirby.cpp" />
     <ClCompile Include="characters\PinxoEnemy.cpp" />
     <ClCompile Include="characters\Player.cpp" />
+    <ClCompile Include="characters\WalkingDummyEnemy.cpp" />
     <ClCompile Include="helpers\ColisionHelper.cpp" />
     <ClCompile Include="helpers\SoundHelper.cpp" />
     <ClCompile Include="helpers\TransformationHelper.cpp" />
