--- a/Kirby/Kirby.vcxproj
+++ b/Kirby/Kirby.vcxproj
@@ -39,6 +39,7 @@
     <ClInclude Include="helpers\TransformationHelper.h" />
     <ClInclude Include="objects\BaseObject.h" />
     <ClInclude Include="objects\EnergyObject.h" />
+    <ClInclude Include="objects\LifeObject.h" />
     <ClInclude Include="objects\ProjectileObject.h" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +69,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="objects\BaseObject.cpp" />
     <ClCompile Include="objects\EnergyObject.cpp" />
+    <ClCompile Include="objects\LifeObject.cpp" />
     <ClCompile Include="objects\ProjectileObject.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
