--- a/Kirby/Kirby.vcxproj.filters
+++ b/Kirby/Kirby.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="objects\LifeObject.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="objects\BigObject.cpp">
+      <Filter>Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimKeyframes.h" />
@@ -171,6 +174,9 @@
       <Filter>Objects</Filter>
     </ClInclude>
     <ClInclude Include="objects\LifeObject.h">
+      <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="objects\BigObject.h">
       <Filter>Objects</Filter>
     </ClInclude>
   </ItemGroup>
